# IonSimulation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ionsim.cpp  main.cpp  pyproject.toml  pysim.cpp  r_list.txt  setup.py  test.py
ion_sim/: CMakeLists.txt  Runge_Kutta.cpp
ion_sim/ion_sim/: Runge_Kutta.cpp  Runge_Kutta.hpp
ioncpp/: CMakeLists.txt
ioncpp/ioncpp/: RungeKutta.cpp  RungeKutta.hpp
ionsim/: __init__.pyi  ionsim.pyi
tests/: simulation.py  test.py
